Fix: VFAT safe names missing a couple of idiosyncrasies

There was some confusion about sanitizing parts or the whole path

BUG: 312574
FIXED-IN: 2.8